src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AIMInvOps__Bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the last time an ACME message was sent and bounced</description>
        <label>Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIMInvOps__Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AC Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIMInvOps__Investor_Contact_Entities2__c</fullName>
        <label>Investor Contact Entities</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIMInvOps__Investor_Contact_Entities__c</fullName>
        <inlineHelpText>This field contains all of the Entities for which this contact is an investor contact. It should not be edited manually.</inlineHelpText>
        <label>zz</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AIMInvOps__Mark_As_Spam__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set if the user email address marked ACME emails as spam</description>
        <label>Mark As Spam</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIMInvOps__PaginationId__c</fullName>
        <description>Obsolete: Please use AIM__Managed__Pagination_Id__c for reports going forward</description>
        <formula>LOWER(CASESAFEID(Id))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Obsolete: Please use AIM__Managed_Pagination_Id__c for reports going forward</inlineHelpText>
        <label>PaginationId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIM__Last_Interaction_Date__c</fullName>
        <formula>AIM__Last_Interaction__r.AIM__Date__c</formula>
        <label>Last Interaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AIM__Last_Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Interaction</label>
        <referenceTo>AIM__Interaction__c</referenceTo>
        <relationshipLabel>Contacts (Last Interaction)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AIM__Last_Touch_Date__c</fullName>
        <formula>AIM__Last_Touch__r.AIM__Date__c</formula>
        <label>Last Touch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AIM__Last_Touch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Touch</label>
        <referenceTo>AIM__Interaction__c</referenceTo>
        <relationshipLabel>Contacts (Last Touch)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AIM__Managed_Pagination_Id__c</fullName>
        <description>This is to be used in reports that have &gt; 2000 contacts in them</description>
        <inlineHelpText>This is to be used in reports that have &gt; 2000 contacts in them</inlineHelpText>
        <label>Managed_Pagination_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AIM__No_Email_References__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, interaction references will not be created for this contact from email tasks or e2sf emails</inlineHelpText>
        <label>No Email/e2sf References</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <displayFormat>C-{000000}</displayFormat>
        <label>Contact ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ShareSecure__Is_ShareSecure_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if a contact is an active user in Share Secure</description>
        <inlineHelpText>Denotes if a contact is an active user in Share Secure</inlineHelpText>
        <label>Is ShareSecure User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>family_id_old__c</fullName>
        <description>family id manually managed by SRP before migrating to a system</description>
        <externalId>true</externalId>
        <label>family-id-old</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mineral_owner_link__c</fullName>
        <label>mineral-owner-link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>owner_id_old__c</fullName>
        <description>old owner id manually managed by SRP</description>
        <externalId>true</externalId>
        <label>owner-id-old</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Currency_Test__c</fullName>
        <description>Test Description</description>
        <inlineHelpText>Test Description</inlineHelpText>
        <label>Currency Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Describe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Describe</label>
        <referenceTo>rh2__PS_Describe__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Formula_Test__c</fullName>
        <formula>rh2__Currency_Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Integer_Test__c</fullName>
        <label>Integer Test</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AIM__All_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>AIM__Last_Interaction__c</columns>
        <columns>AIM__Last_Interaction_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>AIM__Recently_Created_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>AIM__Last_Interaction__c</columns>
        <columns>AIM__Last_Interaction_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Recently Created Contacts</label>
    </listViews>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>family_id_old__c</columns>
        <columns>owner_id_old__c</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>Out_of_state_owners</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.ADDRESS2_STATE</field>
            <operation>notEqual</operation>
            <value>TX</value>
        </filters>
        <label>Out of state owners</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>